test/runnable/imports/test7494a.d
module imports.test7494a;

string foo7494()
{
    return "imports.test7494a.foo7494";
}
