test/fail_compilation/fail140.d

char[] foo()
{
    char[4] string = "abcd";
    return string;
}
